# AmmaXterm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: M0-技術驗證結論.md  PRD-AmmaXterm-v0.5.md  開發計畫-AmmaXterm.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/edit/: mod.rs
src-tauri/src/importer/: mod.rs
src-tauri/src/keygen/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/transfer/: mod.rs
src-tauri/src/tunnel/: mod.rs
src-tauri/src/vault/: mod.rs
src/lib/: AboutDialog.svelte  HostKeyDialog.svelte  KeyGenDialog.svelte  SettingsDialog.svelte  UpdateDialog.svelte  VaultDialog.svelte  i18n.svelte.ts  settings.svelte.ts  state.svelte.ts  updater.svelte.ts
src/lib/ai/: AiPanel.svelte  types.ts
src/lib/session/: TerminalTabs.svelte
src/lib/sftp/: LocalPane.svelte  SftpPanel.svelte  TransferQueue.svelte  types.ts
src/lib/shell/: ActivityBar.svelte  StatusBar.svelte
src/lib/sites/: ImportDialog.svelte  SiteDialog.svelte  SiteSidebar.svelte  types.ts
src/lib/styles/: vscode.css
src/lib/terminal/: Terminal.svelte  types.ts
src/lib/tunnel/: TunnelDialog.svelte  TunnelPanel.svelte  types.ts
src/routes/: +page.svelte
