[package]
name = "ammaxterm"
version = "0.1.0"
description = "AmmaXterm — lightweight open-source SSH terminal"
authors = ["AmmaXterm contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ammaxterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
russh = { version = "0.61.2", default-features = false, features = ["ring", "rsa", "flate2"] }
russh-sftp = "2.3.0"
# Key generation (AK-3): enable ssh-key's keygen path (random + algorithms),
# pinned to the same version russh resolves so the types unify.
ssh-key = { version = "=0.7.0-rc.10", features = ["ed25519", "rsa", "rand_core", "alloc"] }
getrandom = "0.3"
thiserror = "2.0.18"
base64 = "0.22"
uuid = { version = "1.23.3", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"

# OS keychain — per-platform native backends (AK-1).
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
