[package]
name = "ammaxterm"
version = "0.4.6"
description = "AmmaXterm — lightweight open-source SSH terminal"
authors = ["AmmaXterm contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ammaxterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
russh = { version = "0.61.2", default-features = false, features = ["ring", "rsa", "flate2"] }
russh-sftp = "2.3.0"
# Key generation (AK-3): enable ssh-key's keygen path (random + algorithms),
# pinned to the same version russh resolves so the types unify.
ssh-key = { version = "=0.7.0-rc.10", features = ["ed25519", "rsa", "rand_core", "alloc"] }
getrandom = "0.3"
# Encrypted local credential vault (AK-4): Argon2id KDF + AES-256-GCM.
aes-gcm = "0.10"
argon2 = "0.5"
thiserror = "2.0.18"
base64 = "0.22"
uuid = { version = "1.23.3", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
# Remember window size/position/maximized across launches (clamped to monitors).
tauri-plugin-window-state = "2"
# In-app auto-update: check/download/install signed updates from GitHub Releases
# (`tauri-plugin-process` provides the relaunch after install).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# AI assistant (multi-provider, BYO key): outbound HTTPS + SSE streaming.
# Default TLS (schannel on Windows / Secure Transport on macOS / openssl on
# Linux) keeps the Windows build free of NASM/cmake toolchain requirements.
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# OS keychain — per-platform native backends (AK-1).
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
# Read saved PuTTY sessions from the registry (SM-7, Windows-only).
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
